--- a/_harp/public/404.jade
+++ b/_harp/public/404.jade
@@ -1,2 +1,6 @@
-h1 404
-h3 Whoops. Looks like what you're looking for can't be found.
+.bg-primary.text-center.d-flex.h-100.align-items-center
+  .container
+    .row
+      .col-lg-12
+        h1.display-1.text-white 404
+        p.lead.text-white Whoops. Looks like what you're `looking for can't be found.
